@@ -3,41 +3,38 @@ import java.util.Random;
 import javafx.scene.paint.Color;
 
 /**
- * An abstract class for all predators.
- * Contains common behavior for predators: aging, hunger, reproduction, disease handling,
- * and hunting prey (using instanceof Prey).
+ * An abstract class for all prey animals.
+ * Contains common behavior such as aging, hunger, reproduction, disease handling,
+ * and grazing (eating grass).
  */
-public abstract class Predator extends Animal {
+public abstract class Prey extends Animal {
     protected int age;
+    protected boolean disease;
     protected int foodLevel;
-    protected int lifeLeft;
     protected static final Random rand = Randomizer.getRandom();
 
-    public Predator(Field field, Location location, Color col) {
+    public Prey(Field field, Location location, Color col) {
         super(field, location, col);
     }
 
     /**
-     * Common act method for predators:
-     * - Increment age and hunger.
-     * - Attempt reproduction.
-     * - Hunt for food (by checking for any Prey).
-     * - Move to a new location (food or free adjacent).
+     * Common act method for all prey:
+     * - Age, get hungry, reproduce.
+     * - Try to graze (eat grass) first; if none is available, move to a free adjacent location.
      * - Handle disease.
-     * - Spread disease to adjacent animals of the same species.
      */
     @Override
-    public void act(List<Animal> newPredators) {
+    public void act(List<Animal> newOffspring) {
         incrementAge();
         incrementHunger();
         if (isAlive()) {
-            giveBirth(newPredators);
-            Location foodLocation = findFood();
-            Location newLocation = (foodLocation != null)
-                    ? foodLocation
-                    : getField().getFreeAdjacentLocation(getLocation());
-            if (newLocation != null) {
-                setLocation(newLocation);
+            giveBirth(newOffspring);
+            Location foodLocation = feed();
+            if (foodLocation == null) {
+                foodLocation = getField().getFreeAdjacentLocation(getLocation());
+            }
+            if (foodLocation != null) {
+                setLocation(foodLocation);
             } else {
                 setDead();
                 return;
@@ -46,6 +43,8 @@ public abstract class Predator extends Animal {
             diseaseSpread();
         }
     }
+
+
 
     protected void incrementAge() {
         age++;
@@ -62,7 +61,30 @@ public abstract class Predator extends Animal {
     }
 
     /**
-     * Handles the disease state.
+     * Look for grass in adjacent locations. If found, "eat" it by increasing
+     * foodLevel and removing the grass from the field.
+     *
+     * @return The location where grass was eaten, or null if none found.
+     */
+    protected Location feed() {
+        List<Location> adjacent = getField().adjacentLocations(getLocation());
+        for (Location loc : adjacent) {
+            Object obj = getField().getObjectAt(loc);
+            if (obj instanceof Grass grass) {
+                int grassFood = grass.getFoodValue();
+                foodLevel = Math.min(foodLevel + grassFood, gene.MAX_FOOD_VALUE);
+                grass.setDead();
+                break;
+            }
+        }
+        return null;
+    }
+
+
+
+    /**
+     * Handles disease: if not diseased, there's a chance to become diseased;
+     * if already diseased, reduce lifeLeft and possibly die.
      */
     protected void handleDisease() {
         if (!disease) {
@@ -82,44 +104,25 @@ public abstract class Predator extends Animal {
     }
 
 
-    /**
-     * Looks for food in adjacent locations.
-     * Checks if the animal is an instance of Prey.
-     * If a live prey is found, it is killed, foodLevel is increased, and its location returned.
-     */
-    protected Location findFood() {
-        List<Location> adjacent = getField().adjacentLocations(getLocation());
-        for (Location loc : adjacent) {
-            Animal animal = getField().getObjectAt(loc);
-            if (animal instanceof Prey) {
-                if (animal.isAlive()) {
-                    animal.setDead();
-                    foodLevel += animal.getFoodValue();
-                    return loc;
-                }
-            }
-        }
-        return null;
-    }
 
     /**
-     * Handles reproduction. Only females reproduce.
-     * Uses a factory method createYoung(Location) to create an offspring.
+     * Generic method for giving birth. Only females give birth.
+     * Uses the abstract factory method createYoung(Location) to create a new instance.
      */
-    protected void giveBirth(List<Animal> newPredators) {
-        if (getGender() == 1) {
+    protected void giveBirth(List<Animal> newOffspring) {
+        if (getGender() == 1) { // Only females reproduce.
             List<Location> free = getField().getFreeAdjacentLocations(getLocation());
             int births = breed();
             for (int b = 0; b < births && !free.isEmpty(); b++) {
-                Location loc = free.removeFirst();
-                Predator young = createOffspring(loc);
-
+                Location loc = free.remove(0);
+                Prey young = createOffspring(loc);
+                // Find a mate; if none is found, use self as fallback.
                 Animal mate = getField().findParent(getLocation(), getGender());
                 if (mate == null) {
                     mate = this;
                 }
                 young.gene = new Gene(this, mate);
-                newPredators.add(young);
+                newOffspring.add(young);
                 // Increment global births counter.
                 Animal.totalBirths++;
                 // Update births counter for this species.
@@ -127,11 +130,11 @@ public abstract class Predator extends Animal {
                 Animal.birthsBySpecies.put(species, Animal.birthsBySpecies.getOrDefault(species, 0) + 1);
             }
         }
-}
+    }
 
 
     /**
-     * Returns the number of births, if breeding occurs.
+     * Determines the number of births if breeding occurs.
      */
     protected int breed() {
         int births = 0;
@@ -142,23 +145,35 @@ public abstract class Predator extends Animal {
     }
 
     /**
-     * Determines if the predator is old enough to breed and has an opposite-gender neighbor.
+     * Checks whether the prey is old enough to breed and has an opposite-gender neighbor.
      */
     protected boolean canBreed() {
         return age >= gene.BREEDING_AGE && getField().findOppositeGenderAnimal(getLocation(), getGender());
     }
 
-    /**
-     * Factory method to create a new offspring.
-     * Each concrete predator must implement this method.
-     */
-    protected abstract Predator createOffspring(Location loc);
-
     @Override
     public int getFoodValue() {
-        return 0;
+        return gene.MAX_FOOD_VALUE;
     }
 
+    /**
+     * Factory method to create a new offspring of the concrete prey type.
+     * Each concrete prey must implement this method.
+     *
+     * @param loc The location at which the new prey will be placed.
+     * @return A new instance of the prey.
+     */
+    protected abstract Prey createOffspring(Location loc);
+    
+        
+    /**
+     * Returns whether this animal is diseased.
+     * @return true if diseased, false otherwise.
+     */
+    public boolean isDiseased() {
+        return disease;
+    }
+    
     /**
      * Sets the disease status of this animal.
      * @param disease true if the animal should be marked as diseased.
@@ -192,7 +207,7 @@ public abstract class Predator extends Animal {
                     totalDiseaseSpreads++;
                     String species = other.getClass().getSimpleName();
                     diseaseSpreadsBySpecies.put(species, 
-                            diseaseSpreadsBySpecies.getOrDefault(species, 0) + 1);
+                    diseaseSpreadsBySpecies.getOrDefault(species, 0) + 1);
                 } 
             }
         }
